rm video mpunet

--- a/publications.html
+++ b/publications.html
@@ -274,7 +274,7 @@ Rasmus Kær Jørgensen and  Christian Igel.
 
 
   
-  <div class=publication>
+ <div class=publication>
     <a href="https://sleep.ai.ku.dk"><img src="images/USleepHead.png"  align="right" style="margin: 0px 10px 10px 10px" width="250" alt="[U-Sleep]"></a>
   Mathias Perslev,
   Sune Darkner,
@@ -482,9 +482,12 @@ Christian Igel.
   <a href="downloads.html#utime" class="sup">source code</a> 
   </div>
 
-<div class=publication><iframe title="MP-UNet" alt="[MP-UNet]"
+  <div class=publication>
+    <!-- <iframe title="MP-UNet" alt="[MP-UNet]"
     src="images/multi_view_2.mp4"
-    align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
+    align="right"  style="margin: 0px 0px 10px 10px" width="275"
+    allowfullscreen="1" allow="fullscreen">
+    -->
     <p>Your browser does not support frames, therefore the video is
     not playing.</p></iframe>
 Mathias Perslev,
