--- a/publications.html
+++ b/publications.html
@@ -487,9 +487,8 @@ Christian Igel.
     src="images/multi_view_2.mp4"
     align="right"  style="margin: 0px 0px 10px 10px" width="275"
     allowfullscreen="1" allow="fullscreen">
-    -->
     <p>Your browser does not support frames, therefore the video is
-    not playing.</p></iframe>
+    not playing.</p></iframe> -->
 Mathias Perslev,
     Erik Dam,
     Akshay Pai, and
