--- a/publications.html
+++ b/publications.html
@@ -88,6 +88,17 @@ Remember to correct the bias when using deep learning for regression!
 </div>
 
 <div class=publication>
+  Jeppe Klok Due, Marianne
+  Giørtz Pedersen, Sussie Antonsen, Joen Rommedahl, Esben Agerbo, Preben Bo Mortensen, Henrik
+  Toft Sørensen, Jonas Færch Lotz, Laura Cabello Piqueras, Constanza
+  Fierro, Antonia Karamolegkou, Christian Igel, Phillip Rust, Anders Søgaard, and Carsten
+  Bøcker Pedersen.
+  <a href="https://journals.sagepub.com/doi/10.1177/14034948221147096">Towards more comprehensive nationwide familial aggregation studies in
+  Denmark: The Danish Civil Registration System versus the lite Danish
+  Multi-Generation Register</a>. <em>Scandinavian Journal of Public Health</em>, 2023
+</div>
+
+<div class=publication>
 Pierre Hiernaux,
 Bil-Assanou Hassane Issoufou,
 Christian Igel,
@@ -133,7 +144,7 @@ Kaufmann, Ranga Myneni, Sassan Saatchi, and  Rasmus Fensholt. <a
   <h4>2022</h4>
     
 <div class=publication>
-	Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx">High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
+Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx">High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
 <em>American Journal of Gastroenterology</em> <vol>117</vol>(10):1648-1654, 2022
 </div>
 
