--- a/publications.html
+++ b/publications.html
@@ -33,12 +33,6 @@ scholar profile</a>.
 
 
 
-<div class=publication>
-  Christian Igel and Stefan Oehmcke.
-Remember to correct the bias when using deep learning for regression!
-  <em>K&uuml;nstliche Intelligenz</em>, in press
-  </div>
-  
 
 
 
@@ -87,6 +81,12 @@ Remember to correct the bias when using deep learning for regression!
 <em>Osteoarthritis Imaging</em>, 2023
 </div>
 
+<div class=publication>
+  Christian Igel and Stefan Oehmcke.
+< a href="https://link.springer.com/article/10.1007/s13218-023-00801-0">Remember to correct the bias when using deep learning for regression!</a>
+  <em>K&uuml;nstliche Intelligenz</em>, 2023
+  </div>
+  
 <div class=publication>
   Jeppe Klok Due, Marianne
   Giørtz Pedersen, Sussie Antonsen, Joen Rommedahl, Esben Agerbo, Preben Bo Mortensen, Henrik
