--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@ scholar profile</a>.
 <h3>Contributions to journals, books, and conferences</h3>
 
 
-<h4>Coming soon</h4><a name="top"></a>
+<!-- <h4>Coming soon</h4><a name="top"></a> -->
 
 
 
@@ -108,7 +108,7 @@ Jérôme Chave,
 Eric Mougin, and
 Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S0378112722006478">Allometric equations to estimate the dry mass of
   Sahel woody plants from very-high resolution satellite
-  imagery</a>. <em>Forest Ecology, Management</em> <vol>529</vol>, 2023</div>
+  imagery</a>. <em>Forest Ecology and Management</em> <vol>529</vol>, 2023</div>
 
 <div class=publication>
 Sizhuo Li, Martin Brandt, Rasmus Fensholt, Ankit Kariryaa, Christian
@@ -117,7 +117,7 @@ Sizhuo Li, Martin Brandt, Rasmus Fensholt, Ankit Kariryaa, Christian
   Philippe Ciais. <a
   href="https://doi.org/10.1093/pnasnexus/pgad076">Deep learning
   enables image-based tree counting, crown segmentation and height
-  prediction at national scale</a>. <em>PNAS Nexus</em>, 2023
+  prediction at national scale</a>. <em>PNAS Nexus</em> <vol>2</vol>(4), 2023
   </div>
   
 <div class=publication>Compton Tucker, Martin Brandt, Pierre Hiernaux, Ankit Kariryaa, Kjeld Rasmussen, and
