--- a/publications.html
+++ b/publications.html
@@ -73,8 +73,7 @@ scholar profile</a>.
   Erik B. Dam,  Arjun D. Desai,  Cem M. Deniz,  Haresh R. Rajamohan,  Ravinder
   Regatte,  Claudia Iriondo,  Valentina Pedoia, Sharmila Majumdar, Mathias
   Perslev,  Christian Igel,  Akshay Pai,  Sibaji Gaj,  Mingrui
-  Yang,  Kunio
-  Nakamura,  Xiaojuan Li,  Hasan Maqbool,  Ismail Irmakci, 
+  Yang,  Kunio Nakamura,  Xiaojuan Li,  Hasan Maqbool,  Ismail Irmakci, 
   Sang-Eun Song,  Ulas
   Bagci,  Brian Hargreaves,  Garry Gold, and Akshay Chaudhari. <a href="https://doi.org/10.1016/j.ostima.2023.100087 ">Towards Automatic Cartilage Quantification in Clinical Trials –
   Continuing from the 2019 IWOAI Knee Segmentation Challenge</a>.
@@ -118,7 +117,17 @@ Sizhuo Li, Martin Brandt, Rasmus Fensholt, Ankit Kariryaa, Christian
   href="https://doi.org/10.1093/pnasnexus/pgad076">Deep learning
   enables image-based tree counting, crown segmentation and height
   prediction at national scale</a>. <em>PNAS Nexus</em> <vol>2</vol>(4), 2023
-  </div>
+</div>
+
+<div class=publication>Florina Reiner, Martin Brandt, Xiaoye Tong, David Skole, Ankit Kariryaa, Philippe Ciais,
+Andrew Davies, Pierre Hiernaux, Jerome Chave, Maurice Mugabowindekwe, Christian Igel,
+Stefan Oehmcke, Fabian Gieseke,  Sizhuo Li, Siyu Liu, Sassan S. Saatchi, Peter Boucher,
+Jenia Singh, Simon Taugourdeau, Morgane Dendoncker,  Xiao-Peng Song, Ole Mertz,
+Compton Tucker, and Rasmus Fensholt. <a href=https://www.nature.com/articles/s41467-023-37880-4>More than one quarter of Africa’s tree
+cover found outside areas previously classified as forest</a>. <em>Nature
+Communications</em> <vol>14</vol>, 2023/<div>
+
+
   
 <div class=publication>Compton Tucker, Martin Brandt, Pierre Hiernaux, Ankit Kariryaa, Kjeld Rasmussen, and
 Jennifer Small, Christian Igel, Florian Reiner, Katherine Melocik,  Jesse Meyer, Scott
@@ -1826,8 +1835,8 @@ Artificial intelligence surpasses gastrointestinal experts in the classification
 Erik B. Dam, Arjun Desai, Cem M. Deniz, H. Rajamohan, Ravinder
   Regatte, Claudia Iriondo, Valentina Pedoia, Sharmila Majumdar,
   Mathias Perslev, Christian Igel, Akshay Pai, Sibaji Gaj, Mingrui
-  Yang, Kunio Nakamura, Xiaojuan Li, H. Maqbool, I. Irmakci,
-  S.-E. Song, Ulas Bagci, Brian A. Hargreaves, Garry E. Gold, and
+  Yang, Kunio Nakamura, Xiaojuan Li, Hasan Maqbool, Ismail Irmakci,
+  Sang-Eun Song, Ulas Bagci, Brian A. Hargreaves, Garry E. Gold, and
 Akshay S. Chaudhari. Multi-institutional large-scale validation of 8 methods
 for automatic knee MRI segmentation for use in clinical
 trials. <em>Osteoarthritis and Cartilage</em> <vol>30</vol>:S291–S292, 2022.
