--- a/index.html
+++ b/index.html
@@ -115,13 +115,14 @@ href="publications.html">full list</a>.
 I also  maintain a <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ">Google
 scholar profile</a>.
 <p>
-<div class=publication>Florina Reiner, Martin Brandt, Xiaoye Tong, David Skole, Ankit Kariryaa, Philippe Ciais,
+<div class=publication>Florian Reiner, Martin Brandt, Xiaoye Tong, David Skole, Ankit Kariryaa, Philippe Ciais,
 Andrew Davies, Pierre Hiernaux, Jerome Chave, Maurice Mugabowindekwe, Christian Igel,
 Stefan Oehmcke, Fabian Gieseke,  Sizhuo Li, Siyu Liu, Sassan S. Saatchi, Peter Boucher,
 Jenia Singh, Simon Taugourdeau, Morgane Dendoncker,  Xiao-Peng Song, Ole Mertz,
 Compton Tucker, and Rasmus Fensholt. <a href=https://www.nature.com/articles/s41467-023-37880-4>More than one quarter of Africa’s tree
 cover found outside areas previously classified as forest</a>. <em>Nature
-  Communications</em> <vol>14</vol>, 2023/<div>
+Communications</em> <vol>14</vol>, 2023</div>
+
     
 <div class=publication>Compton Tucker, Martin Brandt, Pierre Hiernaux, Ankit Kariryaa, Kjeld Rasmussen, and
 Jennifer Small, Christian Igel, Florian Reiner, Katherine Melocik,  Jesse Meyer, Scott
