--- a/publications.html
+++ b/publications.html
@@ -80,12 +80,7 @@ scholar profile</a>.
 <em>Osteoarthritis Imaging</em>, 2023
 </div>
 
-<div class=publication>
-  Christian Igel and Stefan Oehmcke.
-<a href="https://link.springer.com/article/10.1007/s13218-023-00801-0">Remember to correct the bias when using deep learning for regression!</a>
-  <em>K&uuml;nstliche Intelligenz</em>, 2023
-  </div>
-  
+
 <div class=publication>
   Jeppe Klok Due, Marianne
   Giørtz Pedersen, Sussie Antonsen, Joen Rommedahl, Esben Agerbo, Preben Bo Mortensen, Henrik
@@ -109,6 +104,13 @@ Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S03
   Sahel woody plants from very-high resolution satellite
   imagery</a>. <em>Forest Ecology and Management</em> <vol>529</vol>, 2023</div>
 
+  <div class=publication>
+  Christian Igel and Stefan Oehmcke.
+<a href="https://link.springer.com/article/10.1007/s13218-023-00801-0">Remember to correct the bias when using deep learning for regression!</a>
+  <em>K&uuml;nstliche Intelligenz</em>, 2023
+  </div>
+
+  
 <div class=publication>
 Sizhuo Li, Martin Brandt, Rasmus Fensholt, Ankit Kariryaa, Christian
   Igel, Fabian Gieseke, Thomas Nord-Larsen, Stefan Oehmcke, Ask Holm
@@ -119,13 +121,13 @@ Sizhuo Li, Martin Brandt, Rasmus Fensholt, Ankit Kariryaa, Christian
   prediction at national scale</a>. <em>PNAS Nexus</em> <vol>2</vol>(4), 2023
 </div>
 
-<div class=publication>Florina Reiner, Martin Brandt, Xiaoye Tong, David Skole, Ankit Kariryaa, Philippe Ciais,
+<div class=publication>Florian Reiner, Martin Brandt, Xiaoye Tong, David Skole, Ankit Kariryaa, Philippe Ciais,
 Andrew Davies, Pierre Hiernaux, Jerome Chave, Maurice Mugabowindekwe, Christian Igel,
 Stefan Oehmcke, Fabian Gieseke,  Sizhuo Li, Siyu Liu, Sassan S. Saatchi, Peter Boucher,
 Jenia Singh, Simon Taugourdeau, Morgane Dendoncker,  Xiao-Peng Song, Ole Mertz,
 Compton Tucker, and Rasmus Fensholt. <a href=https://www.nature.com/articles/s41467-023-37880-4>More than one quarter of Africa’s tree
 cover found outside areas previously classified as forest</a>. <em>Nature
-Communications</em> <vol>14</vol>, 2023/<div>
+Communications</em> <vol>14</vol>, 2023</div>
 
 
   
