--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@ scholar profile</a>.
   Sang-Eun Song,  Ulas
   Bagci,  Brian Hargreaves,  Garry Gold, and Akshay Chaudhari. <a href="https://doi.org/10.1016/j.ostima.2023.100087 ">Towards Automatic Cartilage Quantification in Clinical Trials –
   Continuing from the 2019 IWOAI Knee Segmentation Challenge</a>.
-<em>Osteoarthritis Imaging</em>, 2023
+<em>Osteoarthritis Imaging</em> <vol>3</vol>(1):100087, 2023
 </div>
 
 
@@ -107,7 +107,7 @@ Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S03
   <div class=publication>
   Christian Igel and Stefan Oehmcke.
 <a href="https://link.springer.com/article/10.1007/s13218-023-00801-0">Remember to correct the bias when using deep learning for regression!</a>
-  <em>K&uuml;nstliche Intelligenz</em>, 2023
+  <em>K&uuml;nstliche Intelligenz</em> <vol>37</vol>:33-40, 2023
   </div>
 
   
@@ -1826,11 +1826,7 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 <h3>Abstracts and not strictly peer-reviewed contributions to
 conferences and journals</h3>
 
-<div class=publication>
-  Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch.
-Artificial intelligence surpasses gastrointestinal experts in the classification of endoscopic severity among Ulcerative Colitis.
-<em>Journal of Crohn's & Colitis</em> <vol>15</vol> Suppl 1, p. S007, 2021
-</div> 
+
 
 
 <div class=publication>
@@ -1841,8 +1837,24 @@ Erik B. Dam, Arjun Desai, Cem M. Deniz, H. Rajamohan, Ravinder
   Sang-Eun Song, Ulas Bagci, Brian A. Hargreaves, Garry E. Gold, and
 Akshay S. Chaudhari. Multi-institutional large-scale validation of 8 methods
 for automatic knee MRI segmentation for use in clinical
-trials. <em>Osteoarthritis and Cartilage</em> <vol>30</vol>:S291–S292, 2022.
+trials. <em>Osteoarthritis and Cartilage</em> <vol>30</vol>:S291–S292, 2022
 </div>
+
+<div class=publication>
+Mathias Perslev, Anders Sode West, Sofie Amalie Simonsen, Laura Bødker
+  Ponsaing, Helle Klingenberg Iversen, Christian Igel, Poul Jørgen
+  Jennum.
+  Automatic detection of abnormal sleeping patterns in stroke patients
+  using high-frequency sleep staging.
+  <em>Journal of Sleep Research</em> <vol>31</vol>, 2022
+</div>
+
+<div class=publication>
+  Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch.
+Artificial intelligence surpasses gastrointestinal experts in the classification of endoscopic severity among Ulcerative Colitis.
+<em>Journal of Crohn's & Colitis</em> <vol>15</vol> Suppl 1, p. S007, 2021
+</div> 
+
 
 <div class=publication>
 Jaime Caballer Revenga, Katerina Trepekli, Stefan Oehmcke, Fabian
