--- a/publications.html
+++ b/publications.html
@@ -110,7 +110,15 @@ Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S03
   <em>K&uuml;nstliche Intelligenz</em> <vol>37</vol>:33-40, 2023
   </div>
 
-  
+
+  <div class=publication>
+  Siyu Liu, Martin Brandt, Thomas Nord-Larsen, Jerome Chave, Florian Reiner, Nico Lang, Xiaoye Tong, Philippe Ciais, Christian Igel, Adrian Pascual, Juan Guerra-Hernandez, Sizhuo Li, Maurice Mugabowindekwe, Sassan Saatchi, Yuemin Yue, Zhengchao Chen  and Rasmus Fensholt.
+<a href="https://www.science.org/doi/abs/10.1126/sciadv.adh4097">The
+  overlooked contribution of trees outside forests to tree cover and
+  woody biomass across Europe</a>. <em>Science Advances</em>
+  <vol>9</vol>(37), 2023
+</div>
+
 <div class=publication>
 Sizhuo Li, Martin Brandt, Rasmus Fensholt, Ankit Kariryaa, Christian
   Igel, Fabian Gieseke, Thomas Nord-Larsen, Stefan Oehmcke, Ask Holm
