--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,11 @@ scholar profile</a>.
 
 <h4>2023</h4>
 
+
+
+
+
+
   <div class=publication>Patrick Bilic, Patrick Christ, Hongwei Bran Li, Eugene Vorontsov, Avi
   Ben-Cohen, Georgios Kaissis, Adi Szeskin, Colin Jacobs, Gabriel
   Efrain Humpire Mamani, Gabriel Chartrand, Fabian Lohöfer, Julian
@@ -149,6 +154,16 @@ Kaufmann, Ranga Myneni, Sassan Saatchi, and  Rasmus Fensholt. <a
   drylands</a>. <em>Nature</em> <vol>615</vol>:80-86, 2023</div>
 
   
+<div class=publication>
+Philip Enevoldsen,
+Christian Gundersen,
+Nico Lang,
+Serge Belongie, and 
+Christian Igel. Familiarity-Based Open-Set Recognition Under
+  Adversarial Attacks.
+  <em>2nd Workshop and Challenges for Out-of-Distribution
+  Generalization in Computer Vision (OOD-CV)</em>, 2023
+</div>
 
 <div class=publication>
   Rasmus Kær Jørgensen,   Oliver Brandt,   Mareike Hartmann,   Xiang Dai,  Christian Igel, and
