--- a/publications.html
+++ b/publications.html
@@ -28,21 +28,19 @@ scholar profile</a>.
 <h3>Contributions to journals, books, and conferences</h3>
 
 
-<!-- <h4>Coming soon</h4><a name="top"></a> -->
-
-
-
-
+- <h4>Coming soon</h4><a name="top"></a> 
+  <div class=publication>
+Bjørn Leth Møller1, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
+Ida Vind, Bulat Ibragimov, Christian Igel.
+Building an AI Support Tool for Real-time Ulcerative Colitis
+  Diagnosis.  <em>K&uuml;nstliche Intelligenz</em>, accepted
+</div>
 
 
 
 <a name="y23"></a>
 
 <h4>2023</h4>
-
-
-
-
 
 
   <div class=publication>Patrick Bilic, Patrick Christ, Hongwei Bran Li, Eugene Vorontsov, Avi
@@ -166,9 +164,15 @@ Christian Igel. Familiarity-Based Open-Set Recognition Under
 </div>
 
 <div class=publication>
+ Hui Zhang, Ankit Kariryaa, Venkanna Babu Guthula, Christian Igel, and
+ Stefan Oehmcke. Predicting urban tree cover from incomplete point
+ labels and limited background information. <em>Urban-AI</em>, 2023. 
+</div>
+
+<div class=publication>
   Rasmus Kær Jørgensen,   Oliver Brandt,   Mareike Hartmann,   Xiang Dai,  Christian Igel, and
-  Desmond Elliott. MultiFin: A Dataset for Multilingual Financial
-  NLP. <em>Findings of The 16th Conference of the European Chapter of the
+  Desmond Elliott. <a href="https://aclanthology.org/2023.findings-eacl.66.pdf">MultiFin: A Dataset for Multilingual Financial
+  NLP</a>. <em>Findings of The 16th Conference of the European Chapter of the
   Association for Computational Linguistics (EACL Findings)</em>, 2023
 </div>
   
