--- a/publications.html
+++ b/publications.html
@@ -28,10 +28,10 @@ scholar profile</a>.
 <h3>Contributions to journals, books, and conferences</h3>
 
 
-- <h4>Coming soon</h4><a name="top"></a> 
+<h4>Coming soon</h4><a name="top"></a> 
   <div class=publication>
-Bjørn Leth Møller1, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
-Ida Vind, Bulat Ibragimov, Christian Igel.
+Bjørn Leth Mølle1, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
+Ida Vind, Bulat Ibragimov, and Christian Igel.
 Building an AI Support Tool for Real-time Ulcerative Colitis
   Diagnosis.  <em>K&uuml;nstliche Intelligenz</em>, accepted
 </div>
