--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
   <div class=publication>
-Bjørn Leth Mølle1, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
+Bjørn Leth Mølle, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
 Ida Vind, Bulat Ibragimov, and Christian Igel.
 Building an AI Support Tool for Real-time Ulcerative Colitis
   Diagnosis.  <em>K&uuml;nstliche Intelligenz</em>, accepted
