--- a/publications.html
+++ b/publications.html
@@ -157,16 +157,18 @@ Philip Enevoldsen,
 Christian Gundersen,
 Nico Lang,
 Serge Belongie, and 
-Christian Igel. Familiarity-Based Open-Set Recognition Under
-  Adversarial Attacks.
+Christian Igel. <a href="https://arxiv.org/pdf/2311.05006.pdf">Familiarity-Based Open-Set Recognition Under
+  Adversarial Attacks</a>.
   <em>2nd Workshop and Challenges for Out-of-Distribution
   Generalization in Computer Vision (OOD-CV)</em>, 2023
 </div>
 
 <div class=publication>
  Hui Zhang, Ankit Kariryaa, Venkanna Babu Guthula, Christian Igel, and
- Stefan Oehmcke. Predicting urban tree cover from incomplete point
- labels and limited background information. <em>Urban-AI</em>, 2023. 
+ Stefan Oehmcke. <a href="https://dl.acm.org/doi/pdf/10.1145/3615900">Predicting urban tree cover from incomplete point
+ labels and limited background information</a>. <em>UrbanAI '23:
+ Proceedings of the 1st ACM SIGSPATIAL International Workshop on
+ Advances in Urban-AI</em>, ACM, 2023. 
 </div>
 
 <div class=publication>
@@ -180,7 +182,13 @@ Christian Igel. Familiarity-Based Open-Set Recognition Under
 <a name="y22"></a>
 
   <h4>2022</h4>
-    
+<div class=publication>
+Lei Li, Tianfang Zhang, Stefan Oehmcke, Fabian Gieseke, and Christian
+  Igel. BuildSeg: A General Framework for the Segmentation of
+  Buildings. <em>Nordic Machine Intelligence</em> <vol>2</vol>(3), 2022
+</div>
+
+
 <div class=publication>
 Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx">High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
 <em>American Journal of Gastroenterology</em> <vol>117</vol>(10):1648-1654, 2022
