--- a/publications.html
+++ b/publications.html
@@ -113,6 +113,12 @@ Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S03
   <em>K&uuml;nstliche Intelligenz</em> <vol>37</vol>:33-40, 2023
   </div>
 
+  <h4>2022</h4>
+<div class=publication>
+Lei Li, Tianfang Zhang, Stefan Oehmcke, Fabian Gieseke, and Christian
+  Igel. BuildSeg: A General Framework for the Segmentation of
+  Buildings. <em>Nordic Machine Intelligence</em> <vol>2</vol>:1-4, 2023
+</div>
 
   <div class=publication>
   Siyu Liu, Martin Brandt, Thomas Nord-Larsen, Jerome Chave, Florian Reiner, Nico Lang, Xiaoye Tong, Philippe Ciais, Christian Igel, Adrian Pascual, Juan Guerra-Hernandez, Sizhuo Li, Maurice Mugabowindekwe, Sassan Saatchi, Yuemin Yue, Zhengchao Chen  and Rasmus Fensholt.
@@ -181,12 +187,6 @@ Christian Igel. <a href="https://arxiv.org/pdf/2311.05006.pdf">Familiarity-Based
 
 <a name="y22"></a>
 
-  <h4>2022</h4>
-<div class=publication>
-Lei Li, Tianfang Zhang, Stefan Oehmcke, Fabian Gieseke, and Christian
-  Igel. BuildSeg: A General Framework for the Segmentation of
-  Buildings. <em>Nordic Machine Intelligence</em> <vol>2</vol>(3), 2022
-</div>
 
 
 <div class=publication>
