--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,21 @@ Building an AI Support Tool for Real-time Ulcerative Colitis
   Diagnosis.  <em>K&uuml;nstliche Intelligenz</em>, accepted
 </div>
 
+<div class=publication>
+Pedram Bakhtiarifard, Christian Igel, and Raghavendra Selvan.
+EC-NAS: Energy Consumption Aware Tabular Benchmarks for Neural
+Architecture Search. <em>IEEE International Conference on
+  Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted
+</div>
+
+<a name="y24"></a>
+
+<h4>2024</h4>
+
+<div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
+  Nord-Larsen, Katerina Trepekli, Fabian Gieseke, and Christian Igel. <a href="https://doi.org/10.1016/j.rse.2023.113968">Deep point cloud regression for above-ground forest biomass estimation from airborne LiDAR</a>.
+In: <em>Remote Sensing of Environment</em> <vol>302</vol>, 2024
+</div>
 
 
 <a name="y23"></a>
