--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@ Architecture Search. <em>IEEE International Conference on
 
 <div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
   Nord-Larsen, Katerina Trepekli, Fabian Gieseke, and Christian Igel. <a href="https://doi.org/10.1016/j.rse.2023.113968">Deep point cloud regression for above-ground forest biomass estimation from airborne LiDAR</a>.
-In: <em>Remote Sensing of Environment</em> <vol>302</vol>, 2024
+<em>Remote Sensing of Environment</em> <vol>302</vol>, 2024
 </div>
 
 
