--- a/publications.html
+++ b/publications.html
@@ -27,14 +27,19 @@ scholar profile</a>.
 <a name="publications"></a>
 <h3>Contributions to journals, books, and conferences</h3>
 
-
-<h4>Coming soon</h4><a name="top"></a> 
-  <div class=publication>
-Bjørn Leth Møller, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
-Ida Vind, Bulat Ibragimov, and Christian Igel.
-Building an AI Support Tool for Real-time Ulcerative Colitis
-  Diagnosis.  <em>K&uuml;nstliche Intelligenz</em>, accepted
+  <h4>Coming soon</h4><a name="top"></a>
+  
+  <<div class=publication>
+    Martin Brandt, Maurice Mugabowindekwe, Athanase Mukuralinda, Philippe
+  Ciais, Florian Reiner, Ankit Kariryaa, Christian Igel, Jerome Chave,
+  Ole Mertz, Pierre Hiernaux, Xiaoye Tong, Gaspard Rwanyiziri, Dimitri
+  Gominski, Sizhuo Li, Siyu Liu, Ivan Gasangwa, Yves Hategekimana,
+  Alain Ndoli, Jean Nduwamungu, Sassan Saatchi, and Rasmus
+    Fensholt. <em>Communications Earth \& Environment</em>, in press
 </div>
+  
+
+
 
 <div class=publication>
 Pedram Bakhtiarifard, Christian Igel, and Raghavendra Selvan.
@@ -47,6 +52,13 @@ Architecture Search. <em>IEEE International Conference on
 
 <h4>2024</h4>
 
+  <div class=publication>
+Bjørn Leth Møller, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
+Ida Vind, Bulat Ibragimov, and Christian Igel.
+<a href="https://doi.org/10.1007/s13218-023-00820-x">Building an AI Support Tool for Real-time Ulcerative Colitis
+  Diagnosis</a>.  <em>K&uuml;nstliche Intelligenz</em>, 2024
+  </div>
+  
 <div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
   Nord-Larsen, Katerina Trepekli, Fabian Gieseke, and Christian Igel. <a href="https://doi.org/10.1016/j.rse.2023.113968">Deep point cloud regression for above-ground forest biomass estimation from airborne LiDAR</a>.
 <em>Remote Sensing of Environment</em> <vol>302</vol>, 2024
@@ -1876,9 +1888,11 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 <h3>Abstracts and not strictly peer-reviewed contributions to
 conferences and journals</h3>
 
-
-
-
+<div class=publication>
+Bobby Z. S. Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida
+  Vind, Flemming Bendtsen, Johan Burisch, and Bulat Ibragimov. Validating and enhancing real-time disease severity classification in ulcerative colitis: Artificial intelligence as a second opinion trigger. <em>Journal of Crohn’s and Colitis</em> <vol>18</vol>:i1163–i1164, 2024.
+</div>
+  
 <div class=publication>
 Erik B. Dam, Arjun Desai, Cem M. Deniz, H. Rajamohan, Ravinder
   Regatte, Claudia Iriondo, Valentina Pedoia, Sharmila Majumdar,
