--- a/publications.html
+++ b/publications.html
@@ -29,13 +29,13 @@ scholar profile</a>.
 
   <h4>Coming soon</h4><a name="top"></a>
   
-  <<div class=publication>
+  <div class=publication>
     Martin Brandt, Maurice Mugabowindekwe, Athanase Mukuralinda, Philippe
   Ciais, Florian Reiner, Ankit Kariryaa, Christian Igel, Jerome Chave,
   Ole Mertz, Pierre Hiernaux, Xiaoye Tong, Gaspard Rwanyiziri, Dimitri
   Gominski, Sizhuo Li, Siyu Liu, Ivan Gasangwa, Yves Hategekimana,
   Alain Ndoli, Jean Nduwamungu, Sassan Saatchi, and Rasmus
-    Fensholt. <em>Communications Earth \& Environment</em>, in press
+    Fensholt. <em>Communications Earth &amp; Environment</em>, in press
 </div>
   
 
