--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@ scholar profile</a>.
   Ole Mertz, Pierre Hiernaux, Xiaoye Tong, Gaspard Rwanyiziri, Dimitri
   Gominski, Sizhuo Li, Siyu Liu, Ivan Gasangwa, Yves Hategekimana,
   Alain Ndoli, Jean Nduwamungu, Sassan Saatchi, and Rasmus
-    Fensholt. <em>Communications Earth &amp; Environment</em>, in press
+    Fensholt. Trees on smallholder farms and forest restoration are critical for Rwanda to achieve net zero emissions. <em>Communications Earth &amp; Environment</em>, in press
 </div>
   
 
