--- a/publications.html
+++ b/publications.html
@@ -38,15 +38,20 @@ scholar profile</a>.
     Fensholt. Trees on smallholder farms and forest restoration are critical for Rwanda to achieve net zero emissions. <em>Communications Earth &amp; Environment</em>, in press
 </div>
   
-
-
-
 <div class=publication>
 Pedram Bakhtiarifard, Christian Igel, and Raghavendra Selvan.
 EC-NAS: Energy Consumption Aware Tabular Benchmarks for Neural
 Architecture Search. <em>IEEE International Conference on
   Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted
 </div>
+
+
+  <div class=publication>
+  Nico Lang, Vésteinn Snæbjarnarson, Elijah Cole, Oisin Mac Aodha,
+  Christian Igel, Serge Belongie. From Coarse to Fine-Grained Open-Set
+  Recognition. <em>Conference on Computer Vision and
+  Pattern Recognition (CVPR)</em>, accepted</div>
+
 
 <a name="y24"></a>
 
