--- a/publications.html
+++ b/publications.html
@@ -48,8 +48,8 @@ Architecture Search. <em>IEEE International Conference on
 
   <div class=publication>
   Nico Lang, Vésteinn Snæbjarnarson, Elijah Cole, Oisin Mac Aodha,
-  Christian Igel, Serge Belongie. From Coarse to Fine-Grained Open-Set
-  Recognition. <em>Conference on Computer Vision and
+  Christian Igel, and Serge Belongie. From Coarse to Fine-Grained Open-Set
+  Recognition. <em>Computer Vision and
   Pattern Recognition (CVPR)</em>, accepted</div>
 
 
