--- a/publications.html
+++ b/publications.html
@@ -29,15 +29,8 @@ scholar profile</a>.
 
   <h4>Coming soon</h4><a name="top"></a>
   
-  <div class=publication>
-    Martin Brandt, Maurice Mugabowindekwe, Athanase Mukuralinda, Philippe
-  Ciais, Florian Reiner, Ankit Kariryaa, Christian Igel, Jerome Chave,
-  Ole Mertz, Pierre Hiernaux, Xiaoye Tong, Gaspard Rwanyiziri, Dimitri
-  Gominski, Sizhuo Li, Siyu Liu, Ivan Gasangwa, Yves Hategekimana,
-  Alain Ndoli, Jean Nduwamungu, Sassan Saatchi, and Rasmus
-    Fensholt. Trees on smallholder farms and forest restoration are critical for Rwanda to achieve net zero emissions. <em>Communications Earth &amp; Environment</em>, in press
-</div>
-  
+
+
 <div class=publication>
 Pedram Bakhtiarifard, Christian Igel, and Raghavendra Selvan.
 EC-NAS: Energy Consumption Aware Tabular Benchmarks for Neural
@@ -56,6 +49,18 @@ Architecture Search. <em>IEEE International Conference on
 <a name="y24"></a>
 
 <h4>2024</h4>
+  <div class=publication>
+    Martin Brandt, Maurice Mugabowindekwe, Athanase Mukuralinda, Philippe
+  Ciais, Florian Reiner, Ankit Kariryaa, Christian Igel, Jerome Chave,
+  Ole Mertz, Pierre Hiernaux, Xiaoye Tong, Gaspard Rwanyiziri, Dimitri
+  Gominski, Sizhuo Li, Siyu Liu, Ivan Gasangwa, Yves Hategekimana,
+  Alain Ndoli, Jean Nduwamungu, Sassan Saatchi, and Rasmus
+    Fensholt. <a
+    href="https://www.nature.com/articles/s43247-024-01278-x">Trees on
+    smallholder farms and forest restoration are critical for Rwanda
+    to achieve net zero emissions</a>. <em>Communications Earth &amp;
+    Environment</em> <vol>5</vol>:113, 2024
+</div>
 
   <div class=publication>
 Bjørn Leth Møller, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
