--- a/publications.html
+++ b/publications.html
@@ -28,8 +28,13 @@ scholar profile</a>.
 <h3>Contributions to journals, books, and conferences</h3>
 
   <h4>Coming soon</h4><a name="top"></a>
-  
 
+<div class=publication>
+Matthias Freiberger, Peter Kun, Christian Igel, Anders Sundnes Løvlie,
+  and Sebastian Risi. Fooling Contrastive Language-Image Pre-Trained
+  Models with CLIPMasterPrints.
+  <em>Transactions on Machine Learning Research</em>, acceped
+  </div>
 
 <div class=publication>
 Pedram Bakhtiarifard, Christian Igel, and Raghavendra Selvan.
@@ -217,7 +222,7 @@ Christian Igel. <a href="https://arxiv.org/pdf/2311.05006.pdf">Familiarity-Based
 <div class=publication>
   Rasmus Kær Jørgensen,   Oliver Brandt,   Mareike Hartmann,   Xiang Dai,  Christian Igel, and
   Desmond Elliott. <a href="https://aclanthology.org/2023.findings-eacl.66.pdf">MultiFin: A Dataset for Multilingual Financial
-  NLP</a>. <em>Findings of The 16th Conference of the European Chapter of the
+  NLP</a>. <em>Findings of the 16th Conference of the European Chapter of the
   Association for Computational Linguistics (EACL Findings)</em>, 2023
 </div>
   
