--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@ scholar profile</a>.
 Matthias Freiberger, Peter Kun, Christian Igel, Anders Sundnes Løvlie,
   and Sebastian Risi. Fooling Contrastive Language-Image Pre-Trained
   Models with CLIPMasterPrints.
-  <em>Transactions on Machine Learning Research</em>, acceped
+  <em>Transactions on Machine Learning Research</em>, accepted
   </div>
 
 <div class=publication>
