--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,10 @@ scholar profile</a>.
 
   <h4>Coming soon</h4><a name="top"></a>
 
+  
+
+  
+  
 <div class=publication>
 Matthias Freiberger, Peter Kun, Christian Igel, Anders Sundnes Løvlie,
   and Sebastian Risi. Fooling Contrastive Language-Image Pre-Trained
@@ -43,6 +47,12 @@ Architecture Search. <em>IEEE International Conference on
   Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted
 </div>
 
+<div class=publication>
+Christian Igel. Smooth Min-Max Monotonic Networks.
+  <em>International Conference on Machine Learning (ICML)</em>, accepted
+  </div>
+
+
 
   <div class=publication>
   Nico Lang, Vésteinn Snæbjarnarson, Elijah Cole, Oisin Mac Aodha,
@@ -50,6 +60,11 @@ Architecture Search. <em>IEEE International Conference on
   Recognition. <em>Computer Vision and
   Pattern Recognition (CVPR)</em>, accepted</div>
 
+    <div class=publication>
+Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
+    Sporring, Robert Jenssen, and Bulat Ibragimov. Finding NEM-U: Explaining unsupervised representation learning through neural network generated explanation masks.
+  <em>International Conference on Machine Learning (ICML)</em>, accepted
+  </div>
 
 <a name="y24"></a>
 
