--- a/downloads.html
+++ b/downloads.html
@@ -26,6 +26,7 @@
   <a href="#MOCMA">MO-CMA</a>
   <a href="#Rprop">Rprop</a>
   <a href="#GTSRB">Traffic Signs</a>
+  <a href='https://github.com/christian-igel/SMM'>Smooth Min-Max</a>
 </div>
   <a href="https://ai.ku.dk">AI Centre</a>
   <a href="https://di.ku.dk/english/research/machine-learning">ML Section</a>
@@ -87,7 +88,7 @@ Christian Igel.
 
  <h2>woody</h2>
  <iframe title="Woody movie"
-    src="images/KDD2018_fabian_gieseke_christian_igel.mp4"
+    src="images/KDD2018_fabian_gieseke_christian_igel.mp4" sandbox
     align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
     <p>Your browser does not support frames, therefore the video is
     not playing.</p></iframe> Download 
