updated publications, added icon

--- a/publications.html
+++ b/publications.html
@@ -33,19 +33,7 @@ scholar profile</a>.
 
   
   
-<div class=publication>
-Matthias Freiberger, Peter Kun, Christian Igel, Anders Sundnes Løvlie,
-  and Sebastian Risi. Fooling Contrastive Language-Image Pre-Trained
-  Models with CLIPMasterPrints.
-  <em>Transactions on Machine Learning Research</em>, accepted
-  </div>
 
-<div class=publication>
-Pedram Bakhtiarifard, Christian Igel, and Raghavendra Selvan.
-EC-NAS: Energy Consumption Aware Tabular Benchmarks for Neural
-Architecture Search. <em>IEEE International Conference on
-  Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted
-</div>
 
 <div class=publication>
 Christian Igel. Smooth Min-Max Monotonic Networks.
@@ -77,10 +65,17 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
   Alain Ndoli, Jean Nduwamungu, Sassan Saatchi, and Rasmus
     Fensholt. <a
     href="https://www.nature.com/articles/s43247-024-01278-x">Trees on
-    smallholder farms and forest restoration are critical for Rwanda
+<    smallholder farms and forest restoration are critical for Rwanda
     to achieve net zero emissions</a>. <em>Communications Earth &amp;
     Environment</em> <vol>5</vol>:113, 2024
 </div>
+
+<div class=publication>
+Matthias Freiberger, Peter Kun, Christian Igel, Anders Sundnes Løvlie,
+  and Sebastian Risi. <a href="https://openreview.net/pdf?id=ZFZnvGXXMm">Fooling Contrastive Language-Image Pre-Trained
+  Models with CLIPMasterPrints</a>.
+  <em>Transactions on Machine Learning Research</em>, 2024
+  </div>
 
   <div class=publication>
 Bjørn Leth Møller, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
@@ -92,6 +87,14 @@ Ida Vind, Bulat Ibragimov, and Christian Igel.
 <div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
   Nord-Larsen, Katerina Trepekli, Fabian Gieseke, and Christian Igel. <a href="https://doi.org/10.1016/j.rse.2023.113968">Deep point cloud regression for above-ground forest biomass estimation from airborne LiDAR</a>.
 <em>Remote Sensing of Environment</em> <vol>302</vol>, 2024
+</div>
+
+<div class=publication>
+Pedram Bakhtiarifard, Christian Igel, and Raghavendra Selvan.
+<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10448303">EC-NAS: Energy Consumption Aware Tabular Benchmarks for Neural
+Architecture Search</a>. <em>IEEE International Conference on
+  Acoustics, Speech and Signal Processing (ICASSP)</em>,
+pp. 5660-5664, 2024
 </div>
 
 
@@ -384,7 +387,7 @@ Rasmus Kær Jørgensen and  Christian Igel.
   Machine learning for financial transaction classification across
   companies using character-level word embeddings of text fields.
   <em>Intelligent Systems in Accounting, Finance and Management</em>
-  <vol>28</vol>(3), pages 159-172, 2021</div>
+  <vol>28</vol>(3), pp. 159-172, 2021</div>
 
 
   
@@ -862,7 +865,7 @@ Ratio Estimation for Large-Scale Applications in
 
 
 <div class=publication>Nicolae-Bogdan &Scedil;ara, Rasmus Halland,
-  Christian Igel, and Stephen Alstrup. <a href="https://www.elen.ucl.ac.be/Proceedings/esann/esannpdf/es2015-86.pdf">High-school dropout prediction using machine learning: A Danish large-scale study</a>. In M. Verleysen, ed.: <em>23th European Symposium on Artificial Neural Networks</em> (ESANN 2015). i6doc.com, 2015 </div>
+  Christian Igel, and Stephen Alstrup. <a href="https://www.esann.org/sites/default/files/proceedings/legacy/es2015-86.pdf">High-school dropout prediction using machine learning: A Danish large-scale study</a>. In M. Verleysen, ed.: <em>23th European Symposium on Artificial Neural Networks</em> (ESANN 2015). i6doc.com, 2015 </div>
 
 <div class=publication>Oswin Krause and Christian Igel.
 <a href="paper/AMERCMAUfES.pdf">A More Efficient Rank-one Covariance Matrix Update for Evolution
