--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
   Alain Ndoli, Jean Nduwamungu, Sassan Saatchi, and Rasmus
     Fensholt. <a
     href="https://www.nature.com/articles/s43247-024-01278-x">Trees on
-<    smallholder farms and forest restoration are critical for Rwanda
+    smallholder farms and forest restoration are critical for Rwanda
     to achieve net zero emissions</a>. <em>Communications Earth &amp;
     Environment</em> <vol>5</vol>:113, 2024
 </div>
