--- a/publications.html
+++ b/publications.html
@@ -58,6 +58,10 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
 
 <h4>2024</h4>
   <div class=publication>
+     <a href="https://www.nature.com/articles/s43247-024-01278-x"><img
+  src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs43247-024-01278-x/MediaObjects/43247_2024_1278_Fig4_HTML.png?as=webp"
+  align="right" style="margin: 0px 10px 10px 10px" width="250"
+  alt="[Rwanda scenarios]"></a>
     Martin Brandt, Maurice Mugabowindekwe, Athanase Mukuralinda, Philippe
   Ciais, Florian Reiner, Ankit Kariryaa, Christian Igel, Jerome Chave,
   Ole Mertz, Pierre Hiernaux, Xiaoye Tong, Gaspard Rwanyiziri, Dimitri
@@ -68,7 +72,11 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
     smallholder farms and forest restoration are critical for Rwanda
     to achieve net zero emissions</a>. <em>Communications Earth &amp;
     Environment</em> <vol>5</vol>:113, 2024
-</div>
+  </div>
+
+  
+
+  
 
 <div class=publication>
 Matthias Freiberger, Peter Kun, Christian Igel, Anders Sundnes Løvlie,
