--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,9 @@ scholar profile</a>.
 
 
 <div class=publication>
+       <img src="images/MinMax.png "
+  align="right" style="margin: 0px 10px 10px 10px" width="150"
+  alt="[Min-Max architecture]">
 Christian Igel. Smooth Min-Max Monotonic Networks.
   <em>International Conference on Machine Learning (ICML)</em>, accepted
   </div>
@@ -59,7 +62,8 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
 <h4>2024</h4>
   <div class=publication>
      <a href="https://www.nature.com/articles/s43247-024-01278-x"><img
-  src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs43247-024-01278-x/MediaObjects/43247_2024_1278_Fig4_HTML.png?as=webp"
+  <!-- src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs43247-024-01278-x/MediaObjects/43247_2024_1278_Fig4_HTML.png?as=webp" -->
+    src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs43247-024-01278-x/MediaObjects/43247_2024_1278_Fig1_HTML.png?as=webp"
   align="right" style="margin: 0px 10px 10px 10px" width="250"
   alt="[Rwanda scenarios]"></a>
     Martin Brandt, Maurice Mugabowindekwe, Athanase Mukuralinda, Philippe
@@ -92,7 +96,11 @@ Ida Vind, Bulat Ibragimov, and Christian Igel.
   Diagnosis</a>.  <em>K&uuml;nstliche Intelligenz</em>, 2024
   </div>
   
-<div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
+  <div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
+ <div class=publication>
+     <a href="https://doi.org/10.1016/j.rse.2023.113968"><img src="https://ars.els-cdn.com/content/image/1-s2.0-S0034425723005205-ga1_lrg.jpg"
+  align="right" style="margin: 0px 10px 10px 10px" width="250"
+  alt="[biomass from LiDAR]"></a>
   Nord-Larsen, Katerina Trepekli, Fabian Gieseke, and Christian Igel. <a href="https://doi.org/10.1016/j.rse.2023.113968">Deep point cloud regression for above-ground forest biomass estimation from airborne LiDAR</a>.
 <em>Remote Sensing of Environment</em> <vol>302</vol>, 2024
 </div>
