--- a/publications.html
+++ b/publications.html
@@ -212,11 +212,16 @@ Sizhuo Li, Martin Brandt, Rasmus Fensholt, Ankit Kariryaa, Christian
   prediction at national scale</a>. <em>PNAS Nexus</em> <vol>2</vol>(4), 2023
 </div>
 
-<div class=publication>Florian Reiner, Martin Brandt, Xiaoye Tong, David Skole, Ankit Kariryaa, Philippe Ciais,
+<div class=publication>
+<a href=https://www.nature.com/articles/s41467-023-37880-4"><img
+  src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41467-023-37880-4/MediaObjects/41467_2023_37880_Fig2_HTML.png?as=webp"
+  align="right" style="margin: 0px 10px 10px 10px" width="250"
+  alt="[Africa TOF cover]"></a>
+  Florian Reiner, Martin Brandt, Xiaoye Tong, David Skole, Ankit Kariryaa, Philippe Ciais,
 Andrew Davies, Pierre Hiernaux, Jerome Chave, Maurice Mugabowindekwe, Christian Igel,
 Stefan Oehmcke, Fabian Gieseke,  Sizhuo Li, Siyu Liu, Sassan S. Saatchi, Peter Boucher,
 Jenia Singh, Simon Taugourdeau, Morgane Dendoncker,  Xiao-Peng Song, Ole Mertz,
-Compton Tucker, and Rasmus Fensholt. <a href=https://www.nature.com/articles/s41467-023-37880-4>More than one quarter of Africa’s tree
+Compton Tucker, and Rasmus Fensholt. <a href="https://www.nature.com/articles/s41467-023-37880-4">More than one quarter of Africa’s tree
 cover found outside areas previously classified as forest</a>. <em>Nature
 Communications</em> <vol>14</vol>, 2023</div>
 
@@ -278,6 +283,8 @@ Abdelrahman Mohamed, Hung-yi Lee, Lasse Borgholt, Jakob D. Havtorn,
 </div>
 
 <div class=publication>
+     <a href="https://doi.org/10.1038/s41558-022-01544-w"><img src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41558-022-01544-w/MediaObjects/41558_2022_1544_Fig3_HTML.png?as=webp"align="right" style="margin: 0px 10px 10px 10px" width="250"
+  alt="[Rwanda]"></a>
 Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
   David Skole, Ankit Kariryaa, Christian Igel, Pierre Hiernaux,
   Philippe Ciais, Ole Mertz, Xiaoye Tong, Sizhuo Li, Gaspard
