added CVPR paper link

--- a/publications.html
+++ b/publications.html
@@ -45,11 +45,7 @@ Christian Igel. Smooth Min-Max Monotonic Networks.
 
 
 
-  <div class=publication>
-  Nico Lang, Vésteinn Snæbjarnarson, Elijah Cole, Oisin Mac Aodha,
-  Christian Igel, and Serge Belongie. From Coarse to Fine-Grained Open-Set
-  Recognition. <em>Computer Vision and
-  Pattern Recognition (CVPR)</em>, accepted</div>
+
 
     <div class=publication>
 Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
@@ -111,7 +107,12 @@ Architecture Search</a>. <em>IEEE International Conference on
 pp. 5660-5664, 2024
 </div>
 
-
+  <div class=publication>
+  Nico Lang, Vésteinn Snæbjarnarson, Elijah Cole, Oisin Mac Aodha,
+  Christian Igel, and Serge Belongie. <a href=https://langnico.github.io/fine-grained-osr/">From Coarse to Fine-Grained Open-Set
+  Recognition</a>. <em>Computer Vision and
+    Pattern Recognition (CVPR)</em>, 2024</div>
+    
 <a name="y23"></a>
 
 <h4>2023</h4>
