--- a/publications.html
+++ b/publications.html
@@ -622,12 +622,12 @@ Christian Igel.
   </div>
 
   <div class=publication>
-    <!-- <iframe title="MP-UNet" alt="[MP-UNet]"
+    <iframe title="MP-UNet" alt="[MP-UNet]"
     src="images/multi_view_2.mp4"
-    align="right"  style="margin: 0px 0px 10px 10px" width="275"
+    align="right"  style="margin: 0px 0px 10px 10px" width="225"
     allowfullscreen="1" allow="fullscreen">
     <p>Your browser does not support frames, therefore the video is
-    not playing.</p></iframe> -->
+    not playing.</p></iframe> 
 Mathias Perslev,
     Erik Dam,
     Akshay Pai, and
